@@ -624,7 +624,7 @@ package SPVM::Regex {
       elsif ($replace_object isa SPVM::Stringer) {
         my $replace_buffer = SPVM::StringBuffer->new;
         my $stringer = (SPVM::Stringer)$replace_object;
-        my $cb_result = $stringer->to_str;
+        my $cb_result = $stringer->to_str(undef);
         $replace_buffer->push($cb_result);
         $replace = $replace_buffer->to_str;
       }
