@@ -1,3 +1,3 @@
 package SPVM::Stringer : callback_t {
-  sub to_str : string ($self : self);
+  sub to_str : string ($self : self, $obj : object);
 }
