@@ -16,6 +16,7 @@
   - move SPVM::CORE::copy_oarray to SPVM::Util::copy_oarray.
   - add SPVM::Cloner
   - SPVM::Util::copy_oarray do deep clone using SPVM::Cloner.
+  - SPVM::Stringer argument change ($self : self) to ($self : self, $obj : object)
 0.0440 2019-09-06
   - Rename SPVM::Data to SPVM::BlessedObject
   - Rename SPVM::Data::Array to SPVM::BlessedObject::Array
